# conteff

./: README.md  conteff.opam  dune-project
.github/workflows/: ci.yml
docs/: contract-rewrite.md
lib/: annotation.ml  context.ml  dune  effect_builder.ml  lib.ml  rewriter.ml  tmp.ml  utils.ml
src/: box.ml  contract.ml  dune  vector.ml
test/ecdh/: EcdhProtocol.ml  EllipticCurve.ml  client.ml  curves.ml  dune  ecdh_runner.ml  server.ml  test_add_points.ml  test_ecdh_protocol.ml  test_scalar_mult.ml
test/encoder/: codecs.ml  dune  encoder.ml  test_encoder.ml
test/manual/: a.converted.ml  a.ml  annotations.ml  b.converted.ml  b.ml  dune  duplicate.converted.ml  duplicate.ml  function.ml  reference.ml  var.ml
test/merkle/: MerkleTree.ml  dune  test_merkle.ml
test/old/: dune.disable  main.ml  pair_projection.ml
test/tmp/: box.ml  dune  global.ml  global_state.ml  global_state_2.ml  main.ml  recursive.ml  retfunc.ml  try.ml  try2.ml  try2_compiled.ml  try_compiled.ml  tuple.ml  tuple_compiled.ml  vector.ml  wtf.ml  wtf2.ml
test/unit/: dune  test_1.ml  test_2.ml  test_3.ml  test_4.ml  test_5.ml
